--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,18 +14,24 @@
         android:theme="@style/Theme.AppServiceJava"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ImplicitActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+
         </activity>
 
-        <service android:name=".MusicService"/>
+        <service android:name=".MusicService" />
 
-        <receiver android:name=".MyReceiver"/>
+        <receiver android:name=".MyReceiver" />
     </application>
 
 </manifest>
